# wireguard-simple-daemon

./: Cargo.toml  test.sh
.cargo/: config.toml
src/: main.rs
