[package]
name = "wireguard-simple-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Dario Caruso"]
description = "simple crate for wireguard connection daemon"
license = "Apache-2.0"
documentation = "https://docs.rs/wireguard-simple-daemon"
repository = "https://github.com/dottgonzo/wireguard-simple-daemon"


[dependencies]
wireguard_simple_rust_manager = { version = "0.0.3" }
tokio = { version = "1.33.0", features = ["macros","rt-multi-thread","time","process"] }
clap = { version = "4.4.7", features = ["cargo"] }
